<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clUICCContenedorFormulario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".vistas.UICrearCuenta">

    <TextView
        android:id="@+id/txUICCTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_crear_cuenta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txUICCDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/descripcion_crear_cuenta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCTitulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txUICCNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCDescripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUICCNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txUICCFormatoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/formato_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCNombreUsuario" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txUICCCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCFormatoUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUICCCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txUICCContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUICCContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txUICCFormatoContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/formato_contrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCContrasenia" />

    <Button
        android:id="@+id/btnUICCCrear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/boton_crear_cuenta"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCFormatoContrasenia" />

    <ProgressBar
        android:id="@+id/pbUICCProgreso"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txUICCFormatoContrasenia" />
</androidx.constraintlayout.widget.ConstraintLayout>